Moved ingred to its own repo.
Executables are installed in ~/bin and use INGRED_PATH and FOOD_PATH to
find ingred.dat and USDA databases, respectively.  Ingredient text files
now use a '.nut' extension.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,28 +2,37 @@
 
 INCL=$(abspath $(HOME)/App/GSL/include)
 STD=c++23
-
-EXE=$(abspath ..)
+BIN=$(abspath $(HOME)/bin)
 
 OPT=
 
 .PHONY: all clean scour
 
-all: $(EXE)/nut.exe $(EXE)/digest.exe $(EXE)/barf.exe $(EXE)/lookup.exe
+all: nut.exe digest.exe barf.exe lookup.exe
 
-$(EXE)/nut.exe: nut.cpp Nutrition.h
+nut.exe: nut.cpp Nutrition.h
 	g++ -I $(INCL) -std=$(STD) $(OPT) nut.cpp -o $@
 
-$(EXE)/digest.exe: digest.cpp Atwater.cpp Atwater.h To.h Nutrition.h
+digest.exe: digest.cpp Atwater.cpp Atwater.h To.h Nutrition.h
 	g++ -I $(INCL) -std=$(STD) $(OPT) digest.cpp Atwater.cpp Nutrition.cpp -o $@
 
-$(EXE)/barf.exe: barf.cpp Nutrition.cpp Nutrition.h
+barf.exe: barf.cpp Nutrition.cpp Nutrition.h
 	g++ -I $(INCL) -std=$(STD) $(OPT) barf.cpp Nutrition.cpp -o $@
 
-$(EXE)/lookup.exe: lookup.cpp Atwater.cpp Atwater.h To.h
+lookup.exe: lookup.cpp Atwater.cpp Atwater.h To.h
 	g++ -I $(INCL) -std=$(STD) $(OPT) lookup.cpp Atwater.cpp -o $@
 
 clean:
 
 scour: clean
-	rm -f $(EXE)/nut.exe $(EXE)/digest.exe $(EXE)/barf.exe $(EXE)/lookup.exe
+	rm -f nut.exe digest.exe barf.exe lookup.exe
+
+install: all findfood.bash
+	ln --verbose --force --symbolic $(PWD)/nut.exe       $(BIN)/nut
+	ln --verbose --force --symbolic $(PWD)/digest.exe    $(BIN)/digest
+	ln --verbose --force --symbolic $(PWD)/barf.exe      $(BIN)/barf
+	ln --verbose --force --symbolic $(PWD)/lookup.exe    $(BIN)/lookup
+	ln --verbose --force --symbolic $(PWD)/findfood.bash $(BIN)/findfood
+
+uninstall:
+	rm -f $(BIN)/nut $(BIN)/digest $(BIN)/barf $(BIN)/lookup $(BIN)/findfood
